--- a/landtickapp/server/.env
+++ b/landtickapp/server/.env
@@ -4,8 +4,8 @@ SERVER_KEY=SB-Mid-server-Df6TWSEtqfzVg_Fbh8bRnPPy
 CLIENT_KEY=SB-Mid-client-ZAdMOsrvSLltTUmx
 EMAIL_SYSTEM=adr.wijayaaa@gmail.com
 PASSWORD_SYSTEM=hqmqqnxeufhwlpnw
-DB_HOST=containers-us-west-137.railway.app
-DB_PORT=6041
+DB_HOST=landtickapp-db.flycast
+DB_PORT=5432
 DB_USER=postgres
-DB_PASSWORD=Ljwec3vWxdekatCEDvFI
-DB_NAME=railway
+DB_PASSWORD=6frZeUmJtnQ1azQ
+DB_NAME=postgres
