--- a/landtickapp/client/.env
+++ b/landtickapp/client/.env
@@ -1,2 +1,2 @@
-REACT_APP_BASE_URL=https://landtickapp-production.up.railway.app/api/v1
+REACT_APP_BASE_URL=https://landtickapp.fly.dev/api/v1/
 REACT_APP_MIDTRANS_CLIENT_KEY=SB-Mid-client-ZAdMOsrvSLltTUmx
